--- a/books.html
+++ b/books.html
@@ -136,7 +136,7 @@
       <td> $5 </td>
       <td> $20 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> Espresso Lessons </td>
       <td> Arno Ilgner </td>
       <td> Great </td>
@@ -199,7 +199,7 @@
       <td> $5 </td>
       <td> $20 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> The Trad Climber's Bible </td>
       <td> John Long & Peter Croft </td>
       <td> Good </td>
@@ -282,7 +282,7 @@
       <td class="bookTableHeaderOverview" colspan="5">Guidebooks</td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Eldorado Canyon </td>
       <td> Steve Levin </td>
       <td> Good </td>
@@ -314,7 +314,7 @@
       <td> $25 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Joshua Tree Rock Climbs </td>
       <td> Robert Miramontes </td>
       <td> Okay/Poor </td>
@@ -346,7 +346,7 @@
       <td> $23 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Classic Front Range Trad Climbs: Multi-pitch routes (5.4-5.8) </td>
       <td> Brendan Leonard & Lee Smith </td>
       <td> Okay </td>
@@ -394,7 +394,7 @@
       <td> $35 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Bishop Bouldering (2nd Edition) </td>
       <td> Wills Young & Mick Ryan </td>
       <td> Okay </td>
@@ -418,7 +418,7 @@
       <td> $27 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> South Lake Taho Climbing (Supertopo) </td>
       <td> Chris McNamara </td>
       <td> Good </td>
