--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbarCustom">
+    <nav class="navbar navbar-dark navbar-expand-lg navbarCustom" style="background-color: #00b8a9;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
