Item sold, added strikethrough class.
Can't wait until I have a backend!

--- a/books.html
+++ b/books.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-dark navbar-expand-lg navbarCustom" style="background-color: #00b8a9;">
+  <nav class="navbar navbar-dark navbar-expand-lg navbarCustom" style="background-color: #00b8a9;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -370,7 +370,7 @@
       <td> $35 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Joshua Tree Bouldering (2nd Edition) </td>
       <td> Robert Miramontes </td>
       <td> Good </td>
