Added opacity style and image overlay
Playing around with ways to show an item has been sold without deleting it.

--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg navbarCustom" style="background-color: #00b8a9;">
+  <nav class="navbar navbar-dark navbar-expand-lg navbarCustom" style="background-color: #00b8a9;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -84,8 +84,12 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/helmet.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
+
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Vapor Helmet</h5>
               <p class="card-text"><span>Info:</span> Red, Medium/Large. <br> <span>Condition:</span> Okay/Decent. <br> <span>Notes:</span> Some minor dents and scratches. </p>
@@ -140,8 +144,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdBackpack.jpeg" class="card-img-top" alt="...">
+              <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+              </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Bullet Pack</h5>
               <p class="card-text"><span>Info:</span> 16 liter climbing pack. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Older version. </p>
@@ -252,8 +259,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/gearSling.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Cassin: Drus Gear Sling</h5>
               <p class="card-text"><span>Condition:</span> Good.</p>
@@ -308,8 +318,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdAscender.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ascender</h5>
               <p class="card-text"><span>Condition:</span> Good <br> <span>Notes:</span> Used a handful of times. Older version. </p>
@@ -392,8 +405,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/campPhoton.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Camp: Photon Carabiner</h5>
               <p class="card-text"><span>Info:</span> Wiregate, non-locking carabiner. Full size. Selling 8. <br> <span>Condition:</span> Good. </p>
@@ -406,8 +422,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/campNano.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Camp: Nano 22 Carabiner</h5>
               <p class="card-text"><span>Info:</span> Wiregate, non-locking carabiner. Selling 5.  <br> <span>Condition:</span> Good. </p>
@@ -504,8 +523,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/organicCrashPad.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Organic Simple Crashpad</h5>
               <p class="card-text"> <span>Condition:</span> Great. <br> <span>Notes:</span> Used less than 6x. </p>
@@ -518,8 +540,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/belayspecs.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Belay Specs</h5>
               <p class="card-text"><span>Info:</span> For small heads/faces. <br> <span>Condition:</span> Okay. </p>
