Updated stuff sold
Added opacity and overlays

--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -56,8 +56,11 @@
       </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/ropes.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Sterling Aero: Gym Rope (35-40m)</h5>
               <p class="card-text"><span>Info:</span> Blue, 9.2mm. <br> <span>Condition:</span> Like new. <br> <span>Notes:</span> 39m I believe, has been used inside 6x or so. </p>
@@ -439,8 +442,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+         <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdStraightGate.jpeg" class="card-img-top" alt="...">
+           <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">BD: Hot Forge Carabiner </h5>
               <p class="card-text"><span>Info:</span> Straight gate, non-locking carabiner. Selling 2 <br> <span>Condition:</span> Good.  </p>
@@ -453,8 +459,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdBentGate.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">BD: Hot Forge Carabiner</h5>
               <p class="card-text"><span>Info:</span> Bent gate, non-locking carabiner. Selling 3. <br> <span>Condition:</span> Good. </p>
@@ -467,8 +476,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdOz.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Oz Carabiner</h5>
               <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. Selling 2. <br> <span>Condition:</span> Good. </p>
