Added .strikethrough to more books

--- a/books.html
+++ b/books.html
@@ -94,7 +94,7 @@
       <td>$10</td>
       <td>$36</td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td>Avalanche Essentials</td>
       <td>Bruce Temper</td>
       <td>Great</td>
@@ -192,7 +192,7 @@
       <td> $5 </td>
       <td> $22 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> The Mountaineering Handbook </td>
       <td> Craig Connaly </td>
       <td> Great </td>
@@ -270,7 +270,7 @@
       <td> $15 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Killing Dragons -- This is a history of Alpinism in Europe</td>
       <td> Fergus Fleming </td>
       <td> Good </td>
