Marked more books as sold
Added strikethrough class.

--- a/books.html
+++ b/books.html
@@ -171,7 +171,7 @@
       <td> $5 </td>
       <td> $16 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> Ice & Mixed Climbing: Modern Technique </td>
       <td> Will Gadd </td>
       <td> Great </td>
@@ -213,7 +213,7 @@
       <td> $15 </td>
       <td> $29 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> The Crack Climber's Technique Manual </td>
       <td> Kent Pease </td>
       <td> Good </td>
@@ -298,7 +298,7 @@
       <td> $40 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Red River Gorge (South) </td>
       <td> Ray Ellington </td>
       <td> Okay/Poor </td>
@@ -306,7 +306,7 @@
       <td> $25 </td>
     </tr>
 
-    <tr>
+   <tr class="strikethrough">
       <td> Red River Gorge (North) </td>
       <td> Ray Ellington </td>
       <td> Okay/Poor </td>
@@ -402,7 +402,7 @@
       <td> $37 </td>
     </tr>
 
-    <tr>
+   <tr class="strikethrough">
       <td> Yosemite Valley Free Climbs (Supertopo) </td>
       <td> Barnes, McNamara, Roper, Snyder </td>
       <td> Okay/Good </td>
@@ -410,7 +410,7 @@
       <td> $30 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Tuolumne Free Climbs (Supertopo) -- 2nd Edition </td>
       <td> Barnes, McNamara, Roper </td>
       <td> Good </td>
