Marked items as sold
Added opacity and overlays

--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -279,8 +279,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/slings.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: 10mm Dynex Sling</h5>
               <p class="card-text"><span>Info:</span> 60 cm, single-length runner. 2018. Selling 4. <br> <span>Condition:</span> Good.</p>
@@ -293,8 +296,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+         <div class="card h-100" style="opacity: .2">
             <img src="imgs/kongGigi.jpeg" class="card-img-top" alt="...">
+           <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Kong: Gigi</h5>
               <p class="card-text"><span>Info:</span> Simple plate ideal for belaying 2 followers from above. Save the elbows!  <br> <span>Condition:</span> Okay.</p>
@@ -394,8 +400,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdGridlock.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Gridlock Carabiner</h5>
               <p class="card-text"><span>Info:</span> Screwgate, locking, anti-crossloading carabiner. <br> <span>Condition:</span> Great.</p>
@@ -521,8 +530,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdCrashPad.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Impact Crashpad</h5>
               <p class="card-text"> <span>Condition:</span> Great <br> <span>Notes:</span> Used less than 6x. </p>
