Marked items as sold

--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -42,8 +42,11 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 card-deck">
 
       <div class="col mb-4">
-        <div class="card h-100">
+       <div class="card h-100" style="opacity: .2">
           <img src="imgs/ropes.jpeg" class="card-img-top" alt="...">
+         <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Sterling: Nano Rope (70m) </h5>
             <p class="card-text"><span>Info:</span> Green, Dry XP, 9.0mm, middle mark. <br> <span>Condition:</span> Like new. <br> <span>Notes:</span> Has been used a few times, no falls. Purchased in 2019. </p>
@@ -119,8 +122,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/orSunHoody.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">OR: Echo Sun Hoody</h5>
               <p class="card-text"><span>Info:</span> Blue, large, outdoor research. <br> <span>Condition:</span> Great. </p>
@@ -210,7 +216,7 @@
             <img src="imgs/bdCams3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
-              <p class="card-text"><span>Info:</span> Blue, #3. Selling Both. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used around 10x or less.  </p>
+              <p class="card-text"><span>Info:</span> Blue, #3. 1 left. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used around 10x or less.  </p>
             </div>
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $60/each </div>
@@ -248,8 +254,12 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/campBallnut.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Camp: Ball Nut (#3)</h5>
               <p class="card-text"><span>Info:</span> Smallest active protection available.<br> <span>Condition:</span> Like New <br> <span>Notes:</span> Never used. </p>
@@ -358,8 +368,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdPositron.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Positron Carabiner</h5>
               <p class="card-text"><span>Info:</span> Screwgate locking carabiner. Selling 2. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Only cosmetic wear. </p>
@@ -506,7 +519,7 @@
             <img src="imgs/petzlAngeS.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Petzl: Ange S Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. Selling 6. <br> <span>Condition:</span> Great.</p>
+              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner.  3 left. <br> <span>Condition:</span> Great.</p>
             </div>
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $5/each </div>
@@ -520,7 +533,7 @@
             <img src="imgs/petzlAngeL.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Petzl: Ange L Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. Selling 3. <br> <span>Condition:</span> Good. </p>
+              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. 2 left. <br> <span>Condition:</span> Good. </p>
             </div>
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $5/each </div>
