--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -172,7 +172,7 @@
           <img src="imgs/iceClipper.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Petzl: Caritool Evo Ice Clipper </h5>
-            <p class="card-text"><span>Info:</span> Ice screw/tool clipper, selling 3. <br> <span>Condition:</span> New.</p>
+            <p class="card-text"><span>Info:</span> Ice screw/tool clipper, 2 left. <br> <span>Condition:</span> New.</p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $5/each</div>
