--- a/books.html
+++ b/books.html
@@ -290,8 +290,8 @@
       <td> $40 </td>
     </tr>
 
-    <tr>
-      <td> Chatt-trad -- Chattanooga Trad Climbing </td>
+<tr class="strikethrough">
+  <td> Chatt-trad -- Chattanooga Trad Climbing </td>
       <td> Rob Robinson </td>
       <td> Good </td>
       <td> $10 </td>
@@ -354,7 +354,7 @@
       <td> $25 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Clear Creek Canyon Rock Climbing </td>
       <td> Kevin Capps & Matt Lloyd </td>
       <td> Good </td>
@@ -378,7 +378,7 @@
       <td> $42 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Southern California Rock Climbing </td>
       <td> Tom Slater </td>
       <td> Great </td>
@@ -386,7 +386,7 @@
       <td> $43 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Los Angeles County Bouldering </td>
       <td> Matthew Dooley, Fritz, Leventhal </td>
       <td> Great </td>
@@ -466,7 +466,7 @@
       <td> $20 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Squamish Select (2012 Edition) </td>
       <td> Marc Bourdon </td>
       <td> Good </td>
