--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -182,8 +182,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="opacity: .2">
           <img src="imgs/shovelProbe.jpeg" class="card-img-top" alt="...">
+          <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Camp: Rocket Avalanche Shovel</h5>
             <p class="card-text"> <span>Condition:</span> Great. </p>
