--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -76,8 +76,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+           <div class="card h-100" style="opacity: .2">
             <img src="imgs/ropes.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Petzl Push: Semi Static Rope (40m)</h5>
               <p class="card-text"><span>Info:</span> Orange, 9.1mm. <br> <span>Condition:</span> Decent. <br> <span>Notes:</span> A static line with some stretch. Ideal for TR-anchors or fixing a line. Has only been used for that. </p>
@@ -385,8 +388,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+           <div class="card h-100" style="opacity: .2">
             <img src="imgs/petzlOk.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Petzl: OK Carabiner</h5>
               <p class="card-text"><span>Info:</span> Tri-action locking carabiner. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used a couple of times. Good for self belay.  </p>
@@ -515,11 +521,14 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+           <div class="card h-100" style="opacity: .2">
             <img src="imgs/petzlAngeS.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Petzl: Ange S Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner.  3 left. <br> <span>Condition:</span> Great.</p>
+              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. <br> <span>Condition:</span> Great.</p>
             </div>
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $5/each </div>
@@ -529,11 +538,14 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+           <div class="card h-100" style="opacity: .2">
             <img src="imgs/petzlAngeL.jpeg" class="card-img-top" alt="...">
+            <div class="card-img-overlay">
+            <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Petzl: Ange L Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. 2 left. <br> <span>Condition:</span> Good. </p>
+              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. <br> <span>Condition:</span> Good. </p>
             </div>
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $5/each </div>
