--- a/books.html
+++ b/books.html
@@ -322,7 +322,7 @@
       <td> $40 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Touch Schist: Rock Climbing in Northern Vermont </td>
       <td> Travis Peckham </td>
       <td> Good/Great </td>
@@ -482,7 +482,7 @@
       <td> $28 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> The Notches: Western White Mountains of New Hampshire </td>
       <td> Jon Sykes </td>
       <td> Great </td>
@@ -490,7 +490,7 @@
       <td> $40 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> New England Bouldering (2nd Edition) </td>
       <td> Tim Kemple & Pete Ward </td>
       <td> Okay </td>
@@ -498,7 +498,7 @@
       <td> $27 </td>
     </tr>
 
-    <tr>
+<tr class="strikethrough">
       <td> Adirondack Rock (Volume 1) </td>
       <td> Jim Lawyer & Jeremy Haas </td>
       <td> Good </td>
@@ -506,7 +506,7 @@
       <td> $20 </td>
     </tr>
 
-    <tr>
+   <tr class="strikethrough">
       <td> Adirondack Rock (Volume 2) </td>
       <td> Jim Lawyer & Jeremy Haas </td>
       <td> Good </td>
@@ -514,7 +514,7 @@
       <td> $20 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Blue Lines: An Adirondack Ice Climber's Guide </td>
       <td> Don Mellor </td>
       <td> Great </td>
@@ -522,7 +522,7 @@
       <td> $26 </td>
     </tr>
 
-    <tr>
+   <tr class="strikethrough">
       <td> An Ice Climber's Guide to NOrthern New England (Third Edition) </td>
       <td> Peter Lewis & Rick Wilcox </td>
       <td> Great </td>
