--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -59,23 +59,6 @@
       </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style="opacity: .2">
-            <img src="imgs/ropes.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Sterling Aero: Gym Rope (35-40m)</h5>
-              <p class="card-text"><span>Info:</span> Blue, 9.2mm. <br> <span>Condition:</span> Like new. <br> <span>Notes:</span> 39m I believe, has been used inside 6x or so. </p>
-            </div>
-            <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $40 </div>
-              <div> <span>Retail Price:</span> $100ish </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col mb-4">
           <div class="card h-100">
             <img src="imgs/flashboard.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -153,7 +136,7 @@
             <img src="imgs/bdCams4.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
-              <p class="card-text"><span>Info:</span> Gray, #4. Selling both. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
+              <p class="card-text"><span>Info:</span> Gray, #4. 1 left. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
             </div>
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $70/each </div>
@@ -205,11 +188,8 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style="opacity: .2">
+          <div class="card h-100">
             <img src="imgs/slings.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: 10mm Dynex Sling</h5>
               <p class="card-text"><span>Info:</span> 60 cm, single-length runner. 2018. Selling 4. <br> <span>Condition:</span> Good.</p>
@@ -298,11 +278,8 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style="opacity: .2">
+          <div class="card h-100">
             <img src="imgs/bdGridlock.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Gridlock Carabiner</h5>
               <p class="card-text"><span>Info:</span> Screwgate, locking, anti-crossloading carabiner. <br> <span>Condition:</span> Great.</p>
@@ -344,57 +321,6 @@
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $3/each </div>
               <div> <span>Retail Price:</span> $7/each </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col mb-4">
-         <div class="card h-100" style="opacity: .2">
-            <img src="imgs/bdStraightGate.jpeg" class="card-img-top" alt="...">
-           <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">BD: Hot Forge Carabiner </h5>
-              <p class="card-text"><span>Info:</span> Straight gate, non-locking carabiner. Selling 2 <br> <span>Condition:</span> Good.  </p>
-            </div>
-            <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $3/each </div>
-              <div> <span>Retail Price:</span> $8/each </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col mb-4">
-          <div class="card h-100" style="opacity: .2">
-            <img src="imgs/bdBentGate.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">BD: Hot Forge Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Bent gate, non-locking carabiner. Selling 3. <br> <span>Condition:</span> Good. </p>
-            </div>
-            <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $3/each </div>
-              <div> <span>Retail Price:</span> $8/each </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col mb-4">
-          <div class="card h-100" style="opacity: .2">
-            <img src="imgs/bdOz.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Black Diamond: Oz Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. Selling 2. <br> <span>Condition:</span> Good. </p>
-            </div>
-            <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $4/each </div>
-              <div> <span>Retail Price:</span> $10/each </div>
             </div>
           </div>
         </div>
