--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -42,11 +42,8 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 card-deck">
 
       <div class="col mb-4">
-       <div class="card h-100" style="opacity: .2">
+       <div class="card h-100">
           <img src="imgs/ropes.jpeg" class="card-img-top" alt="...">
-         <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
           <div class="card-body">
             <h5 class="card-title">Sterling: Nano Rope (70m) </h5>
             <p class="card-text"><span>Info:</span> Green, Dry XP, 9.0mm, middle mark. <br> <span>Condition:</span> Like new. <br> <span>Notes:</span> Has been used a few times, no falls. Purchased in 2019. </p>
@@ -253,40 +250,6 @@
             <div class="card-footer d-flex justify-content-around">
               <div> <span>Sale Price:</span> $10 </div>
               <div> <span>Retail Price:</span> $20 </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col mb-4">
-           <div class="card h-100" style="opacity: .2">
-            <img src="imgs/petzlAngeS.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Petzl: Ange S Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. <br> <span>Condition:</span> Great.</p>
-            </div>
-            <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $5/each </div>
-              <div> <span>Retail Price:</span> $12/each </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col mb-4">
-           <div class="card h-100" style="opacity: .2">
-            <img src="imgs/petzlAngeL.jpeg" class="card-img-top" alt="...">
-            <div class="card-img-overlay">
-            <h2 class="card-title" style="color:white">On hold/Sold</h5>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Petzl: Ange L Carabiner</h5>
-              <p class="card-text"><span>Info:</span> Wire gate, non-locking carabiner. <br> <span>Condition:</span> Good. </p>
-            </div>
-            <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $5/each </div>
-              <div> <span>Retail Price:</span> $13/each </div>
             </div>
           </div>
         </div>
