--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -99,14 +99,14 @@
 
         <div class="col mb-4">
           <div class="card h-100">
-            <img src="imgs/bdCams4.jpeg" class="card-img-top" alt="...">
+            <img src="imgs/cam4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
-              <p class="card-text"><span>Info:</span> Gray, #4. 1 left. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
+              <p class="card-text"><span>Info:</span> Gray, #4. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
             </div>
             <div class="card-footer d-flex justify-content-around">
-              <div> <span>Sale Price:</span> $70/each </div>
-              <div> <span>Retail Price:</span> $130/each </div>
+              <div> <span>Sale Price:</span> $70 </div>
+              <div> <span>Retail Price:</span> $130 </div>
             </div>
           </div>
         </div>
