--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -99,7 +99,7 @@
 
         <div class="col mb-4">
           <div class="card h-100">
-            <img src="imgs/cam4.jpeg" class="card-img-top" alt="...">
+            <img src="imgs/cam4.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
               <p class="card-text"><span>Info:</span> Gray, #4. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
