--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -141,7 +141,7 @@
 
        <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/ambit.jpg" class="card-img-top" alt="...">
+          <img src="imgs/ambit.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Sunto Ambit 3 Peak</h5>
             <p class="card-text"><span>Info:</span> 3-5 years old. With gps and heart rate compatible (needs chest strap). <br> <span>Condition:</span> A few scratches; otherwise works fine. </p>
