--- a/books.html
+++ b/books.html
@@ -230,8 +230,14 @@
       <td class="bookTableHeaderOverview" colspan="5">Guidebooks</td>
     </tr>
 
-<tr class="strikethrough">
-
+    <tr>
+      <td> Joshua Tree Sport Climbs & TR Sites </td>
+      <td> Todd Gordon </td>
+      <td> Good/Great -- a few highlights </td>
+      <td> $20 </td>
+      <td> $45 </td>
+    </tr>
+    
     <tr>
       <td> Climbing Boulder's Flatirons </td>
       <td> Jason Haas </td>
